--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
 		canvasApp();
 	}
 
+	function canvasApp() {
 	var theCanvas = document.getElementById("canvasOne");
 	var context = theCanvas.getContext("2d");
 	
@@ -179,6 +180,7 @@
 		
 		drawShapes();		
 	}
+}
 
 
 	</script>
