--- a/home.html
+++ b/home.html
@@ -192,10 +192,11 @@
 	</head>
 
 	<body>
-		<div style="top: 50px; text-align:center">
+		<div style = "top: 50px; text-align:center" id="container">
 			<h4>A Simple HTML5 Canvas Example - Dragging Objects</h4>
-			<canvas id="canvasOne" width="530" height="433"></canvas>
-			<p>Drag the circles with the mouse.</p>
+    		<img style="position:absolute;z-index:1;" src="court_small.png"/>
+    		<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="433"></canvas>
+    		<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position.</p>
 		</div>
 	</body>
 
