--- a/home.html
+++ b/home.html
@@ -179,8 +179,8 @@
 
 	function drawScreen() {
 		//bg
-		context.fillStyle = "#000000";
-		context.fillRect(0,0,theCanvas.width,theCanvas.height);
+		//context.fillStyle = "#000000";
+		//context.fillRect(0,0,theCanvas.width,theCanvas.height);
 		
 		drawShapes();		
 	}
