--- a/home.html
+++ b/home.html
@@ -196,8 +196,8 @@
 			context.closePath();
 			context.fill();
 		}
-		arrow(theCanvas,shapes[0],shapes[2]);
-		arrow(theCanvas,shapes[1],shapes[3]);
+		arrow(context,shapes[0],shapes[2]);
+		arrow(context,shapes[1],shapes[3]);
 	}
 
 	function drawScreen() {
