--- a/home.html
+++ b/home.html
@@ -196,7 +196,9 @@
 			context.closePath();
 			context.fill();
 		}
+		context.fillStyle="rgb(0,255,0)";
 		arrow(context,shapes[0],shapes[2]);
+		context.fillStyle="rgb(255,0,0";
 		arrow(context,shapes[1],shapes[3]);
 	}
 
