--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 	
 	function makeShapes() {
 		var i;
-		var tempRad = 15;
+		var tempRad = 12;
 		var tempX = Math.random()*(theCanvas.width - tempRad);
 		var tempY = Math.random()*(theCanvas.height - tempRad);
 		var tempR = 0;
@@ -245,10 +245,13 @@
 
 	<body>
 		<div style = "top: 50px; text-align:center" id="container">
-			<h4>A Simple HTML5 Canvas Example - Dragging Objects</h4>
+			<h3>FG% Model Visualization</h3>
     		<img style="position:absolute;z-index:1;" src="court_small.png"/>
     		<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
-    		<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position.</p>
+		</div>
+		<div>
+		<h4> Instructions </h4>
+		<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position. Arrows represent the velocity of the player at the time of shot release.</p>
 		</div>
 	</body>
 
