--- a/home.html
+++ b/home.html
@@ -244,15 +244,14 @@
 	</head>
 
 	<body>
-		<div style = "top: 50px; text-align:center" id="container">
+		<div style = "top: 50px;">
 			<h3>FG% Model Visualization</h3>
 			<h4> Instructions </h4>
 			<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position. Arrows represent the velocity of the player at the time of shot release.</p>
-    		<img style="position:absolute;z-index:1;" src="court_small.png"/>
-    		<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 		</div>
-		<div>
-		
+		<div style = "top: 50px; text-align:center" id="container">
+			<img style="position:absolute;z-index:1;" src="court_small.png"/>
+    		<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 		</div>
 	</body>
 
