--- a/home.html
+++ b/home.html
@@ -254,7 +254,7 @@
 				<img style="position:absolute;z-index:1;" src="court_small.png"/>
     			<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 			</div>
-			<div style="float:right">
+			<div style="float:left">
 				<h5>Player Info</h5>
 			</div>
 		</div>
