--- a/home.html
+++ b/home.html
@@ -250,11 +250,11 @@
 			<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position. Arrows represent the velocity of the player at the time of shot release.</p>
 		</div>
 		<div style = "top: 50px; text-align:center" id="container">
-			<div style="float:left">
+			<div style="display:inline-block;vertical-align: top;">
 				<img style="position:absolute;z-index:1;" src="court_small.png"/>
     			<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 			</div>
-			<div style="float:left">
+			<div style="display:inline-block;vertical-align: top;">
 				<h5>Player Info</h5>
 			</div>
 		</div>
