--- a/home.html
+++ b/home.html
@@ -45,6 +45,8 @@
 	var mouseY;
 	var dragHoldX;
 	var dragHoldY;
+	var constants = [0.516754, -0.077344, 0.00104, -0.018845, -0.001406, -0.035365, 0.091047, 0.001475, 0.012132, -0.002991]
+
 	
 	function init() {
 		numShapes = 4;
@@ -200,6 +202,10 @@
 		arrow(context,shapes[0],shapes[2]);
 		context.fillStyle="rgb(255,0,0";
 		arrow(context,shapes[1],shapes[3]);
+		var output = dataCalcs();
+		var prediction = calcPercentage();
+		var fgdiv = document.getElementById("fgnum");
+		fgdiv.innerHTML = "" + prediction;
 	}
 
 	function drawScreen() {
@@ -236,6 +242,31 @@
       ctx.restore();
     }
 
+    function dataCalcs() {
+    	var intercept = 1;
+    	var shooter_distance = Math.sqrt((shapes[0].x-265)*(shapes[0].x-265) + (shapes[0].y-345)*(shapes[0].y-345))/10.6;
+    	var shooter_angle_shifted_abs = 0;
+    	var shooter_velocity_ft_sec = Math.sqrt((shapes[0].x-shapes[2].x)*(shapes[0].x-shapes[2].x) + (shapes[0].y-shapes[2].y)*(shapes[0].y-shapes[2].y))/10.6;
+    	var shooter_velocity_angle_abs = 0;
+    	var dribbles_before = 0;
+    	var defender_distance = Math.sqrt((shapes[0].x-shapes[1].x)*(shapes[0].x-shapes[1].x) + (shapes[0].y-shapes[1].y)*(shapes[0].y-shapes[1].y))/10.6;
+    	var defender_angle_abs = 0;
+    	var defender_velocity_ft_sec = Math.sqrt((shapes[3].x-shapes[1].x)*(shapes[3].x-shapes[1].x) + (shapes[3].y-shapes[1].y)*(shapes[3].y-shapes[1].y))/10.6;
+    	var defender_velocity_angle_abs = 0;
+
+    	var output = [intercept, shooter_distance, shooter_angle_shifted_abs, shooter_velocity_ft_sec, shooter_velocity_angle_abs, dribbles_before, defender_distance, defender_angle_abs, defender_velocity_ft_sec, defender_velocity_angle_abs];
+    	return output;
+    }
+
+    function calcPercentage(variablearray) {
+    	var i;
+    	var sum = 0;
+    	for (i = 0, i < constants.length, i++) {
+    		sum = sum + variablearray[i]*constants[i];
+    	}
+    	return (Math.exp(sum)/(Math.exp(sum)+1))
+    }
+
 }
 
 
@@ -256,6 +287,8 @@
 			</div>
 			<div style="display:inline-block;vertical-align: top;">
 				<h5>Player Info</h5>
+				<div id="fgnum">
+				</div>
 			</div>
 		</div>
 	</body>
