--- a/home.html
+++ b/home.html
@@ -254,17 +254,18 @@
     	var defender_velocity_ft_sec = Math.sqrt((shapes[3].x-shapes[1].x)*(shapes[3].x-shapes[1].x) + (shapes[3].y-shapes[1].y)*(shapes[3].y-shapes[1].y))/10.6;
     	var defender_velocity_angle_abs = 0;
 
-    	var output = [intercept, shooter_distance, shooter_angle_shifted_abs, shooter_velocity_ft_sec, shooter_velocity_angle_abs, dribbles_before, defender_distance, defender_angle_abs, defender_velocity_ft_sec, defender_velocity_angle_abs];
-    	return output;
+    	
+    	return [intercept, shooter_distance, shooter_angle_shifted_abs, shooter_velocity_ft_sec, shooter_velocity_angle_abs, dribbles_before, defender_distance, defender_angle_abs, defender_velocity_ft_sec, defender_velocity_angle_abs];
     }
 
     function calcPercentage(variablearray) {
     	var i;
     	var sum = 0;
-    	for (i = 0, i < constants.length, i++) {
+    	for (i = 0; i < constants.length; i++) {
     		sum = sum + variablearray[i]*constants[i];
     	}
-    	return (Math.exp(sum)/(Math.exp(sum)+1))
+    	var prediction = Math.exp(sum)/(Math.exp(sum)+1)
+    	return prediction;
     }
 
 }
