--- a/home.html
+++ b/home.html
@@ -266,7 +266,7 @@
     	}
     	var prediction = Math.exp(sum)/(Math.exp(sum)+1);
     	var output = Math.round(prediction * 1000) / 1000;
-    	return prediction;
+    	return output;
     }
 
 }
