--- a/home.html
+++ b/home.html
@@ -248,7 +248,7 @@
     	var obj_1 = document.getElementById("shooter_distance");
     	obj_1.innerHTML="Shooter Distance: " +shooter_distance;
 
-    	var shooter_angle_shifted_abs = Math.atan2(shapes[0].y, Math.abs((shapes[0].x-265)));
+    	var shooter_angle_shifted_abs = Math.atan2(shapes[0].y, Math.abs((shapes[0].x-265)))*180/Math.PI;
     	var obj_2 = document.getElementById("shooter_angle_shifted_abs");
     	obj_2.innerHTML="Shooter Angle: " +shooter_angle_shifted_abs;
 
