--- a/home.html
+++ b/home.html
@@ -246,36 +246,36 @@
 
     	var shooter_distance = Math.sqrt((shapes[0].x-265)*(shapes[0].x-265) + (shapes[0].y-345)*(shapes[0].y-345))/10.6;
     	var obj_1 = document.getElementById("shooter_distance");
-    	obj_1.innerHTML="Shooter Distance: " +shooter_distance;
+    	obj_1.innerHTML="Shooter Distance: " + roundx(shooter_distance,1);
 
     	var shooter_angle_shifted_abs = Math.atan2(shapes[0].y, Math.abs((shapes[0].x-265)))*180/Math.PI;
     	var obj_2 = document.getElementById("shooter_angle_shifted_abs");
-    	obj_2.innerHTML="Shooter Angle: " +shooter_angle_shifted_abs;
+    	obj_2.innerHTML="Shooter Angle: " + roundx(shooter_angle_shifted_abs,1);
 
     	var shooter_velocity_ft_sec = Math.sqrt((shapes[0].x-shapes[2].x)*(shapes[0].x-shapes[2].x) + (shapes[0].y-shapes[2].y)*(shapes[0].y-shapes[2].y))/10.6;
 		var obj_3 = document.getElementById("shooter_velocity_ft_sec");
-    	obj_3.innerHTML="Shooter Velocity: " + shooter_velocity_ft_sec;
+    	obj_3.innerHTML="Shooter Velocity: " + roundx(shooter_velocity_ft_sec,1);
 
     	var shooter_velocity_angle_abs = 0;
     	var obj_4 = document.getElementById("shooter_velocity_angle_abs");
-    	obj_4.innerHTML="Shooter Velocity Angle: " + shooter_velocity_angle_abs;
+    	obj_4.innerHTML="Shooter Velocity Angle: " + roundx(shooter_velocity_angle_abs,1);
 
     	
     	var defender_distance = Math.sqrt((shapes[0].x-shapes[1].x)*(shapes[0].x-shapes[1].x) + (shapes[0].y-shapes[1].y)*(shapes[0].y-shapes[1].y))/10.6;
 		var obj_5 = document.getElementById("defender_distance");
-    	obj_5.innerHTML="Defender Distance: " + defender_distance;
+    	obj_5.innerHTML="Defender Distance: " + roundx(defender_distance,1);
 
     	var defender_angle_abs = 0;
     	var obj_6 = document.getElementById("defender_angle_abs");
-    	obj_6.innerHTML="Defender Angle: " + defender_angle_abs;
+    	obj_6.innerHTML="Defender Angle: " + roundx(defender_angle_abs,1);
 
     	var defender_velocity_ft_sec = Math.sqrt((shapes[3].x-shapes[1].x)*(shapes[3].x-shapes[1].x) + (shapes[3].y-shapes[1].y)*(shapes[3].y-shapes[1].y))/10.6;
     	var obj_7 = document.getElementById("defender_velocity_ft_sec");
-    	obj_7.innerHTML="Defender Velocity: " + defender_velocity_ft_sec;
+    	obj_7.innerHTML="Defender Velocity: " + roundx(defender_velocity_ft_sec,1);
 
     	var defender_velocity_angle_abs = 0;
     	var obj_8 = document.getElementById("defender_velocity_angle_abs");
-    	obj_8.innerHTML="Defender Velocity Angle: " + defender_velocity_angle_abs;
+    	obj_8.innerHTML="Defender Velocity Angle: " + roundx(defender_velocity_angle_abs,1);
 
     	var dribbles_before = 0;
     	var obj_9 = document.getElementById("dribbles_before");
