--- a/home.html
+++ b/home.html
@@ -321,7 +321,7 @@
 				<img style="position:absolute;z-index:1;" src="court_small.png"/>
     			<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 			</div>
-			<div style="display:inline-block;vertical-align: top;">
+			<div style="display:inline-block;vertical-align: top;margin-left: 30px">
 				<h5>Player Info</h5>
 				<div id="fgnum">
 				</div>
