--- a/home.html
+++ b/home.html
@@ -266,7 +266,8 @@
 		var obj_5 = document.getElementById("defender_distance");
     	obj_5.innerHTML="Defender Distance: " + roundx(defender_distance,1);
 
-    	var defender_angle_abs = 0;
+    	var dist_c_def = Math.sqrt((shapes[1].x-265)*(shapes[1].x-265) + (shapes[1].y-345)*(shapes[1].y-345))/10.6;
+    	var defender_angle_abs = Math.acos((shooter_distance*shooter_distance + defender_distance*defender_distance - dist_c_def*dist_c_def)/(2*shooter_distance*defender_distance))*180/Math.PI;
     	var obj_6 = document.getElementById("defender_angle_abs");
     	obj_6.innerHTML="Defender Angle: " + roundx(defender_angle_abs,1);
 
@@ -317,7 +318,7 @@
 			<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position. Arrows represent the velocity of the player at the time of shot release.</p>
 		</div>
 		<div style = "top: 50px; text-align:center" id="container">
-			<div style="display:inline-block;vertical-align: top;position:absolute;">
+			<div style="display:inline-block;vertical-align: top;">
 				<img style="position:absolute;z-index:1;" src="court_small.png"/>
     			<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 			</div>
