--- a/home.html
+++ b/home.html
@@ -275,13 +275,14 @@
     	var obj_7 = document.getElementById("defender_velocity_ft_sec");
     	obj_7.innerHTML="Defender Velocity: " + roundx(defender_velocity_ft_sec,1);
 
-    	var defender_velocity_angle_abs = 0;
+    	var dist_c_def_angle = Math.sqrt((shapes[0].x-shapes[3].x)*(shapes[0].x-shapes[3].x) + (shapes[0].y-shapes[3].y)*(shapes[0].y-shapes[3].y))/10.6;
+    	var defender_velocity_angle_abs = Math.acos((defender_velocity_ft_sec*defender_velocity_ft_sec + defender_distance*defender_distance - dist_c_def_angle*dist_c_def_angle)/(2*defender_velocity_ft_sec*defender_distance))*180/Math.PI;
     	var obj_8 = document.getElementById("defender_velocity_angle_abs");
     	obj_8.innerHTML="Defender Velocity Angle: " + roundx(defender_velocity_angle_abs,1);
 
-    	var dribbles_before = 0;
-    	var obj_9 = document.getElementById("dribbles_before");
-    	obj_9.innerHTML="Dribbles Before: " + dribbles_before;
+    	//var dribbles_before = 0;
+    	//var obj_9 = document.getElementById("dribbles_before");
+    	//obj_9.innerHTML="Dribbles Before: " + dribbles_before;
 
     	
     	return [intercept, shooter_distance, shooter_angle_shifted_abs, shooter_velocity_ft_sec, shooter_velocity_angle_abs, dribbles_before, defender_distance, defender_angle_abs, defender_velocity_ft_sec, defender_velocity_angle_abs];
