--- a/home.html
+++ b/home.html
@@ -280,7 +280,7 @@
     	var obj_8 = document.getElementById("defender_velocity_angle_abs");
     	obj_8.innerHTML="Defender Velocity Angle: " + roundx(defender_velocity_angle_abs,1);
 
-    	//var dribbles_before = 0;
+    	var dribbles_before = 0;
     	//var obj_9 = document.getElementById("dribbles_before");
     	//obj_9.innerHTML="Dribbles Before: " + dribbles_before;
 
