--- a/home.html
+++ b/home.html
@@ -314,8 +314,8 @@
 
 	<body>
 		<div style = "top: 50px; text-align:center">
-			<h3>FG% Model Visualization</h3>
-			<h4> Instructions </h4>
+			<h2>FG% Model Visualization</h2>
+			<h3> Instructions </h3>
 			<p>Drag the circles with the mouse. Green indicates shooter position, Red indicates defender position. Arrows represent the velocity of the player at the time of shot release.</p>
 		</div>
 		<div style = "top: 50px; text-align:center" id="container">
@@ -324,9 +324,7 @@
     			<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 			</div>
 			<div style="display:inline-block;vertical-align: top;margin-left: 30px">
-				<h5>Player Info</h5>
-				<div id="fgnum">
-				</div>
+				<h4>Info</h4>
 				<div id="shooter_distance">
 				</div>
 				<div id="shooter_angle_shifted_abs">
@@ -343,7 +341,10 @@
 				</div>
 				<div id="defender_velocity_angle_abs">
 				</div>
-				<div id="dribbles_before">
+				<div id="dribbles_before" style="color:transparent">
+					             
+				</div>
+				<div id="fgnum">
 				</div>
 			</div>
 		</div>
