--- a/home.html
+++ b/home.html
@@ -323,7 +323,7 @@
 				<img style="position:absolute;z-index:1;" src="court_small.png"/>
     			<canvas style="position:relative;z-index:20" id="canvasOne" width="530" height="403"></canvas>
 			</div>
-			<div style="display:inline-block;vertical-align: top;margin-left: 30px">
+			<div style="display:inline-block;vertical-align: top;margin-left: 30px;width:200px">
 				<h4>Info</h4>
 				<div id="shooter_distance">
 				</div>
@@ -342,7 +342,7 @@
 				<div id="defender_velocity_angle_abs">
 				</div>
 				<div id="dribbles_before" style="color:transparent">
-					             
+
 				</div>
 				<div id="fgnum">
 				</div>
