--- a/home.html
+++ b/home.html
@@ -246,39 +246,39 @@
 
     	var shooter_distance = Math.sqrt((shapes[0].x-265)*(shapes[0].x-265) + (shapes[0].y-345)*(shapes[0].y-345))/10.6;
     	var obj_1 = document.getElementById("shooter_distance");
-    	obj_1.innerHTML="Shooter Distance: " + roundx(shooter_distance,1);
+    	obj_1.innerHTML="Shooter Distance (ft): " + roundx(shooter_distance,1);
 
     	var dist_c = Math.sqrt((shapes[0].x-265)*(shapes[0].x-265) + (shapes[0].y)*(shapes[0].y))/10.6;
     	var shooter_angle_shifted_abs = Math.acos((shooter_distance*shooter_distance + (345/10.6)*(345/10.6) - dist_c*dist_c)/(2*shooter_distance*(345/10.6)))*180/Math.PI;
     	var obj_2 = document.getElementById("shooter_angle_shifted_abs");
-    	obj_2.innerHTML="Shooter Angle: " + roundx(shooter_angle_shifted_abs,1);
+    	obj_2.innerHTML="Shooter Angle (degrees): " + roundx(shooter_angle_shifted_abs,1);
 
     	var shooter_velocity_ft_sec = Math.sqrt((shapes[0].x-shapes[2].x)*(shapes[0].x-shapes[2].x) + (shapes[0].y-shapes[2].y)*(shapes[0].y-shapes[2].y))/10.6;
 		var obj_3 = document.getElementById("shooter_velocity_ft_sec");
-    	obj_3.innerHTML="Shooter Velocity: " + roundx(shooter_velocity_ft_sec,1);
+    	obj_3.innerHTML="Shooter Velocity (ft/s): " + roundx(shooter_velocity_ft_sec,1);
 
     	var dist_c_angle = Math.sqrt((shapes[2].x-265)*(shapes[2].x-265) + (shapes[2].y-345)*(shapes[2].y-345))/10.6;
     	var shooter_velocity_angle_abs = Math.acos((shooter_distance*shooter_distance + shooter_velocity_ft_sec*shooter_velocity_ft_sec - dist_c_angle*dist_c_angle)/(2*shooter_distance*shooter_velocity_ft_sec))*180/Math.PI;
     	var obj_4 = document.getElementById("shooter_velocity_angle_abs");
-    	obj_4.innerHTML="Shooter Velocity Angle: " + roundx(shooter_velocity_angle_abs,1);
+    	obj_4.innerHTML="Shooter Velocity Angle (degrees): " + roundx(shooter_velocity_angle_abs,1);
 
     	var defender_distance = Math.sqrt((shapes[0].x-shapes[1].x)*(shapes[0].x-shapes[1].x) + (shapes[0].y-shapes[1].y)*(shapes[0].y-shapes[1].y))/10.6;
 		var obj_5 = document.getElementById("defender_distance");
-    	obj_5.innerHTML="Defender Distance: " + roundx(defender_distance,1);
+    	obj_5.innerHTML="Defender Distance (ft): " + roundx(defender_distance,1);
 
     	var dist_c_def = Math.sqrt((shapes[1].x-265)*(shapes[1].x-265) + (shapes[1].y-345)*(shapes[1].y-345))/10.6;
     	var defender_angle_abs = Math.acos((shooter_distance*shooter_distance + defender_distance*defender_distance - dist_c_def*dist_c_def)/(2*shooter_distance*defender_distance))*180/Math.PI;
     	var obj_6 = document.getElementById("defender_angle_abs");
-    	obj_6.innerHTML="Defender Angle: " + roundx(defender_angle_abs,1);
+    	obj_6.innerHTML="Defender Angle (degrees): " + roundx(defender_angle_abs,1);
 
     	var defender_velocity_ft_sec = Math.sqrt((shapes[3].x-shapes[1].x)*(shapes[3].x-shapes[1].x) + (shapes[3].y-shapes[1].y)*(shapes[3].y-shapes[1].y))/10.6;
     	var obj_7 = document.getElementById("defender_velocity_ft_sec");
-    	obj_7.innerHTML="Defender Velocity: " + roundx(defender_velocity_ft_sec,1);
+    	obj_7.innerHTML="Defender Velocity (ft/s): " + roundx(defender_velocity_ft_sec,1);
 
     	var dist_c_def_angle = Math.sqrt((shapes[0].x-shapes[3].x)*(shapes[0].x-shapes[3].x) + (shapes[0].y-shapes[3].y)*(shapes[0].y-shapes[3].y))/10.6;
     	var defender_velocity_angle_abs = Math.acos((defender_velocity_ft_sec*defender_velocity_ft_sec + defender_distance*defender_distance - dist_c_def_angle*dist_c_def_angle)/(2*defender_velocity_ft_sec*defender_distance))*180/Math.PI;
     	var obj_8 = document.getElementById("defender_velocity_angle_abs");
-    	obj_8.innerHTML="Defender Velocity Angle: " + roundx(defender_velocity_angle_abs,1);
+    	obj_8.innerHTML="Defender Velocity Angle (degrees): " + roundx(defender_velocity_angle_abs,1);
 
     	var dribbles_before = 0;
     	//var obj_9 = document.getElementById("dribbles_before");
@@ -344,7 +344,7 @@
 				<div id="dribbles_before" style="color:transparent">
 
 				</div>
-				<div id="fgnum">
+				<div id="fgnum" style="font-weight:bold">
 				</div>
 			</div>
 		</div>
